# django_notification

./: README.md  pyproject.toml
django_notification/: asgi.py  settings.py  urls.py  wsgi.py
notification_app/: admin.py  apps.py  consumers.py  models.py  signals.py  urls.py  views.py
notification_app/migrations/: 0001_initial.py
notification_app/templates/: home.html
