[tool.poetry]
name = "notification"
version = "0.1.0"
description = ""
authors = ["Poonkawin Saravanan <poonkawin@mallow-tech.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
daphne = "^4.0.0"
channels = "^4.0.0"
channels-redis = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
